[gd_scene load_steps=13 format=3 uid="uid://di8fk3jlbck0q"]

[ext_resource type="Texture2D" uid="uid://bjrwrc4bl5k5n" path="res://assets/player/ambulance.png" id="1_0y8mo"]
[ext_resource type="Script" path="res://src/player.gd" id="1_ijo36"]
[ext_resource type="Texture2D" uid="uid://6e0bpl1wyfyv" path="res://assets/player/ambulance1.png" id="3_v56e2"]
[ext_resource type="Texture2D" uid="uid://dx8qvlu2lhwa3" path="res://assets/menu/UI/arrowBlue_left.png" id="4_nrv52"]
[ext_resource type="Texture2D" uid="uid://ryu83lb8qylp" path="res://assets/menu/UI/arrowBlue_right.png" id="5_cb12o"]
[ext_resource type="Texture2D" uid="uid://d11o8npyvtaga" path="res://assets/menu/UI/arrowBlue_down.png" id="6_sqocj"]
[ext_resource type="Texture2D" uid="uid://bs4vqygxlrsf" path="res://assets/menu/UI/arrowBlue_up.png" id="7_pogq1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ny5on"]
atlas = ExtResource("1_0y8mo")
region = Rect2(0, 0, 38, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_st3k6"]
atlas = ExtResource("3_v56e2")
region = Rect2(0, 0, 38, 21)

[sub_resource type="SpriteFrames" id="SpriteFrames_6vxmk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny5on")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_st3k6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cq8n8"]
size = Vector2(38, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rt4u5"]
size = Vector2(38.25, 21)

[node name="Player" type="CharacterBody2D"]
position = Vector2(945, 529)
script = ExtResource("1_ijo36")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6vxmk")
frame_progress = 0.675632

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_cq8n8")

[node name="Camera2D" type="Camera2D" parent="."]
ignore_rotation = false
limit_left = 0
limit_top = 0
limit_bottom = 1080
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 10.0
rotation_smoothing_speed = 10.0

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="Left" type="Button" parent="Camera2D/CanvasLayer"]
offset_left = 38.0
offset_top = 860.0
offset_right = 256.0
offset_bottom = 1027.0
icon = ExtResource("4_nrv52")
flat = true
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Right" type="Button" parent="Camera2D/CanvasLayer"]
offset_left = 417.0
offset_top = 860.0
offset_right = 624.0
offset_bottom = 1027.0
icon = ExtResource("5_cb12o")
flat = true
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Down" type="Button" parent="Camera2D/CanvasLayer"]
offset_left = 1673.0
offset_top = 684.0
offset_right = 1880.0
offset_bottom = 851.0
icon = ExtResource("6_sqocj")
flat = true
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Up" type="Button" parent="Camera2D/CanvasLayer"]
offset_left = 1673.0
offset_top = 276.0
offset_right = 1880.0
offset_bottom = 443.0
icon = ExtResource("7_pogq1")
flat = true
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_rt4u5")

[connection signal="button_down" from="Camera2D/CanvasLayer/Left" to="." method="_on_left_button_down"]
[connection signal="button_up" from="Camera2D/CanvasLayer/Left" to="." method="_on_left_button_up"]
[connection signal="button_down" from="Camera2D/CanvasLayer/Right" to="." method="_on_right_button_down"]
[connection signal="button_up" from="Camera2D/CanvasLayer/Right" to="." method="_on_right_button_up"]
[connection signal="button_down" from="Camera2D/CanvasLayer/Down" to="." method="_on_down_button_down"]
[connection signal="button_up" from="Camera2D/CanvasLayer/Down" to="." method="_on_down_button_up"]
[connection signal="button_down" from="Camera2D/CanvasLayer/Up" to="." method="_on_up_button_down"]
[connection signal="button_up" from="Camera2D/CanvasLayer/Up" to="." method="_on_up_button_up"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
